The simple forms gem is working correctly now. I had to check out some stackoverflow posts on how to pass routes in the simple_form syntax.

--- a/app/assets/stylesheets/scrolling-nav.css
+++ b/app/assets/stylesheets/scrolling-nav.css
@@ -45,11 +45,11 @@ of those sections to manage the look and feel of the site. */
     /*background: #eee;*/
 }
 
-.services-section {
+.list-section {
     height: 100%;
     padding-top: 150px;
-    text-align: center;
-    background: #fff;
+    /*text-align: center;*/
+    /*background: #fff;*/
 }
 
 .contact-section {
